--- a/less/base.less
+++ b/less/base.less
@@ -133,17 +133,12 @@ header {
 	}
 
 
-.header:before {
-    display:block; 
-    content:""; 
-    height:50px; 
-    margin:-50px 0 0; 
-}
-
-
-
 /* NAVIGATION */
 
+
+.anchor {
+	padding: 100px;
+}
 
 nav.top-menu {
 
